Fixed styles of the buttons in dark mode

--- a/src/styles/_countries.scss
+++ b/src/styles/_countries.scss
@@ -206,7 +206,7 @@
         border-color: $Very-dark-blue;
       }
     }
-    .previous-icon, .next-icon {
+    #previous-icon, #next-icon {
       background-color: $White;
       color: $Dark-blue;
     }
